--- a/client/body/body.html
+++ b/client/body/body.html
@@ -3,7 +3,16 @@
   <title>Dhruv Rajan</title>
 </head>
 <body>
+  <div id="heading">
+    <h1 id="me">Dhruv Rajan</h1>
+    <h1 id="tagline">Open Source & Full Stack Developer</h1>
+  </div>
 
-  <h1 id="me">Dhruv Rajan</h1>
-  <h2 id="tagline">Open Source & Full Stack Developer</h2>
+  <div id="skills">
+    <h1>Technical Skills</h1>
+    Python: nltk3, scikit-learn, numpy, pandas, scipy, SQLAlchemy, Flask <br>
+    Java, HTML5, CSS3, JavaScript, SQL, {{> latex_logo}} <br>
+    Linux, PostgreSQL, Meteor, Git, Github
+  </div>
+
 </body>
