Added body.css import

--- a/body.html
+++ b/body.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dhruv Rajan</title>
+  <link rel="stylesheet" href="body.css">
   <link rel="stylesheet" href="/public/serif/cmun-serif.css">
   <link rel="stylesheet" href="/public/sans-serif/cmun-sans-serif.css">
   <link rel="stylesheet" href="/public/serif-italic/cmun-classical-serif-italic.css">
