Added back experience section

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Dhruv Rajan</title>
+
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="/public/serif/cmun-serif.css">
-  <link rel="stylesheet" href="/public/sans-serif/cmun-sans-serif.css">
   <link rel="stylesheet" href="/public/serif-italic/cmun-classical-serif-italic.css">
-  <link rel="stylesheet" href="/public/serif-slanted/cmun-serif-slanted.css">
 </head>
 <body>
   <div id="heading">
     <h1 id="me">Dhruv Rajan</h1>
-    <h1 id="tagline">Open Source & Full Stack Developer</h1>
+    <h1 id="tagline">Open Source & Full Stack Developer | <a href="mailto:dhruv@krishnaprem.com>">dhruv@krishnaprem.com</a></h1>
   </div>
 
 
@@ -21,16 +20,17 @@
     Linux, PostgreSQL, Meteor, Git, Github
   </div>
 
-  <!--<div id="experience">-->
-    <!--<h1>Experience</h1>-->
-    <!--<div class="workplace">-->
-      <!--<span class="date">2014</span> <span class="name">Declara</span>-->
-      <!--<p class="title">Data Science Intern</p>-->
-      <!--Applied natural language processing and machine learning algorithms -->
-      <!--to create an automatic text-tagging system.-->
+  <div id="experience">
+    <h1>Experience</h1>
+    <div class="workplace">
+      <span class="date">2014</span> <span class="name">Declara</span>
+      <p class="title">Data Science Intern</p>
+      Applied natural language processing and machine learning algorithms
+      to create an automatic text-tagging system.
+    </div>
+  </div>
 
-    <!--</div>-->
-  <!--</div>-->
+  <div></div>
 
 
 </body>
