Added back experience section

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     Linux, PostgreSQL, Meteor, Git, Github
   </div>
 
-  <!--<div id="experience">-->
-    <!--<h1>Experience</h1>-->
-    <!--<div class="workplace">-->
-      <!--<span class="date">2014</span> <span class="name">Declara</span>-->
-      <!--<p class="title">Data Science Intern</p>-->
-      <!--Applied natural language processing and machine learning algorithms -->
-      <!--to create an automatic text-tagging system.-->
+  <div id="experience">
+    <h1>Experience</h1>
+    <div class="workplace">
+      <span class="date">2014</span> <span class="name">Declara</span>
+      <p class="title">Data Science Intern</p>
+      Applied natural language processing and machine learning algorithms
+      to create an automatic text-tagging system.
 
-    <!--</div>-->
-  <!--</div>-->
+    </div>
+  </div>
 
 
 </body>
