Added handlebars import

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/public/sans-serif/cmun-sans-serif.css">
   <link rel="stylesheet" href="/public/serif-italic/cmun-classical-serif-italic.css">
   <link rel="stylesheet" href="/public/serif-slanted/cmun-serif-slanted.css">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.amd.js"></script>
 </head>
 <body>
   <div id="heading">
