Beginning style revamp

--- a/index.html
+++ b/index.html
@@ -1,36 +1,17 @@
+<!DOCTYPE html>
 <head>
-  <meta charset="UTF-8">
-  <title>Dhruv Rajan</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="/public/serif/cmun-serif.css">
-  <link rel="stylesheet" href="/public/sans-serif/cmun-sans-serif.css">
-  <link rel="stylesheet" href="/public/serif-italic/cmun-classical-serif-italic.css">
-  <link rel="stylesheet" href="/public/serif-slanted/cmun-serif-slanted.css">
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.amd.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="dhruv's blog: thedigitalminstrel"/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
+
 <body>
-  <div id="heading">
-    <h1 id="me">Dhruv Rajan</h1>
-    <h1 id="tagline">Open Source & Full Stack Developer</h1>
-  </div>
+  <header id="header">
+    <h1>
+      Dhruv Rajan
+    </h1>
+  </header>
 
-
-  <div id="skills">
-    <h1>Technical Skills</h1>
-    Python: nltk3, scikit-learn, numpy, pandas, scipy, SQLAlchemy, Flask <br>
-    Java, HTML5, CSS3, JavaScript, SQL, <span class="latex">L<sup id="a">a</sup>T<sub>e</sub>X</span> <br>
-    Linux, PostgreSQL, Meteor, Git, Github
-  </div>
-
-  <div id="experience">
-    <h1>Experience</h1>
-    <div class="workplace">
-      <span class="date">2014</span> <span class="name">Declara</span>
-      <p class="title">Data Science Intern</p>
-      Applied natural language processing and machine learning algorithms
-      to create an automatic text-tagging system.
-
-    </div>
-  </div>
 </body>
