personal description in about.html and index.html

--- a/about.html
+++ b/about.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  HI
 </head>
 <body>
+  <header>
+    Dhruv Rajan ff
+  </header>
 
 </body>
 </html>
