--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/public/serif/cmun-serif.css">
+  <link rel="stylesheet" href="/public/sans-serif/cmun-sans.css">
+  <link rel="stylesheet" href="/public/serif-italic/cmun-classical-serif-italic.css">
+  <link rel="stylesheet" href="/public/serif-slanted/cmun-serif-slanted.css">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Volkorn">
   <meta name="description" content="dhruv's blog: thedigitalminstrel"/>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
