--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <h1 id="tagline">Open Source & Full Stack Developer</h1>
   </div>
 
+  <div>
+    <h1>Dhruv Rajan</h1>
+    <p>
+      B.S. Computer Science (Turing Scholar) <br>
+      The University of Texas at Austin <br>
+
+      email: dhruv (at) cs (dot) utexas (dot) edu
+    </p>
+  </div>
+
 
   <div id="skills">
     <h1>Technical Skills</h1>
