--- a/index.html
+++ b/index.html
@@ -3,44 +3,51 @@
   <title>Dhruv Rajan</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="/public/serif/cmun-serif.css">
-  <link rel="stylesheet" href="/public/sans-serif/cmun-sans-serif.css">
+  <link rel="stylesheet" href="/public/sans-serif/cmun-sans.css">
   <link rel="stylesheet" href="/public/serif-italic/cmun-classical-serif-italic.css">
   <link rel="stylesheet" href="/public/serif-slanted/cmun-serif-slanted.css">
 </head>
 <body>
-  <div id="heading">
-    <h1 id="me">Dhruv Rajan</h1>
-    <h1 id="tagline">Open Source & Full Stack Developer</h1>
-  </div>
 
-  <div>
-    <h1>Dhruv Rajan</h1>
-    <p>
-      B.S. Computer Science (Turing Scholar) <br>
-      The University of Texas at Austin <br>
-
-      email: dhruv (at) cs (dot) utexas (dot) edu
-    </p>
-  </div>
-
-
-  <div id="skills">
-    <h1>Technical Skills</h1>
-    Python: nltk3, scikit-learn, numpy, pandas, scipy, SQLAlchemy, Flask <br>
-    Java, HTML5, CSS3, JavaScript, SQL, <span class="latex">L<sup id="a">a</sup>T<sub>e</sub>X</span> <br>
-    Linux, PostgreSQL, Meteor, Git, Github
-  </div>
-
-  <div id="experience">
-    <h1>Experience</h1>
-    <div class="workplace">
-      <span class="date">2014</span> <span class="name">Declara</span>
-      <p class="title">Data Science Intern</p>
-      Applied natural language processing and machine learning algorithms
-      to create an automatic text-tagging system.
-
+  <div id="backdrop">
+    <div id="heading">
+      <h1 id="me">Dhruv Rajan</h1>
+      <h1 id="tagline">Open Source & Full Stack Developer</h1>
     </div>
+
+    <div>
+      <h1>Dhruv Rajan</h1>
+      <p>
+        B.S. Computer Science (Turing Scholar) <br>
+        The University of Texas at Austin <br>
+        different
+
+        email: dhruv (at) cs (dot) utexas (dot) edu
+      </p>
+    </div>
+
+
+    <div id="skills">
+      <h1>Technical Skills</h1>
+      Python: nltk3, scikit-learn, numpy, pandas, scipy, SQLAlchemy, Flask <br>
+      Java, HTML5, CSS3, JavaScript, SQL, <span class="latex">L<sup id="a">a</sup>T<sub>e</sub>X</span> <br>
+      Linux, PostgreSQL, Meteor, Git, Github
+    </div>
+
+    <div id="experience">
+      <h1>Experience</h1>
+      <div class="workplace">
+        <span class="date">2014</span> <span class="name">Declara</span>
+        <p class="title">Data Science Intern</p>
+        Applied natural language processing and machine learning algorithms
+        to create an automatic text-tagging system.
+
+      </div>
+    </div>
+
   </div>
+
+
 
 
 </body>
