--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 </head>
 <body>
 
-  <div id="backdrop">
+  <div id="page-content">
     <div id="heading">
       <h1 id="me">Dhruv Rajan</h1>
       <h1 id="tagline">Open Source & Full Stack Developer</h1>
     </div>
 
     <div>
+
       <h1>Dhruv Rajan</h1>
+      <img src="">
       <p>
         B.S. Computer Science (Turing Scholar) <br>
         The University of Texas at Austin <br>
-        different
+        Austin, TX, 78705 <br> <br>
 
-        email: dhruv (at) cs (dot) utexas (dot) edu
+        email: <span id="email">dhruv (at) cs (dot) utexas (dot) edu</span>
       </p>
     </div>
 
