--- a/index.html
+++ b/index.html
@@ -18,38 +18,79 @@
     <div>
 
       <h1>Dhruv Rajan</h1>
-      <img src="">
+      <img height="176" width="159" src="face.jpg">
       <p>
         B.S. Computer Science (Turing Scholar) <br>
         The University of Texas at Austin <br>
         Austin, TX, 78705 <br> <br>
-
         email: <span id="email">dhruv (at) cs (dot) utexas (dot) edu</span>
       </p>
     </div>
 
 
     <div id="skills">
-      <h1>Technical Skills</h1>
+      <h3>Technical Skills</h3>
+      <p id="skill-list">
       Python: nltk3, scikit-learn, numpy, pandas, scipy, SQLAlchemy, Flask <br>
       Java, HTML5, CSS3, JavaScript, SQL, <span class="latex">L<sup id="a">a</sup>T<sub>e</sub>X</span> <br>
       Linux, PostgreSQL, Meteor, Git, Github
+      </p> <hr>
+
+      <p id="coursework">
+        Relevant Coursework: <br>
+        (Ongoing) Computer Organization and Architecture (CS 429H), Linear Algebra (M 341) <br>
+        (Completed) Data Structures and Algorithms (CS 314H), Discrete Math for Computer Science (311 H),
+        Probability I (M 362K), Multivariable and Vector Calculus <br>
+
+        Online: Principles of Functional Programming in Haskell (TU Delft),
+        Intro to Computational Thinking and Data Science (MIT 6.00x),
+        Algorithms I (Princeton)
+      </p>
+    </div>
+
+    <div id="projects">
+      <h3>Projects</h3>
+      <div class="project">
+        <span class="date">October 2016</span> <span class="name">scrivener.ai</span>
+        Using speech-recognition and grammatical parsing in python (nltk) to develop a system
+        which can listen to a corporate meeting, and automatically extract conversational information (deadlines,
+        projects, dependencies), and display it as a gantt chart. At MHacks 2016, I put together a simple proof
+        of concept, and I'm continuing to develop further.
+      </div> <hr>
+
+      <div class="project">
+        <span class="date">January 2015</span> <span class="name">mind controlled internet of things</span>
+        My friend Armin and I worked on this together. Collecting data from a MUSE EEG-sensing headband, and using
+        pylab for vizualization and statistical analysis, we were able to discern between mental states (ex. "agitated",
+        "calm") to (1) control lightbulbs, but (2) to use as a very simple authentication system, where a "password" is a
+        sequence of mental states.
+      </div>
     </div>
 
     <div id="experience">
-      <h1>Experience</h1>
+      <h3>Work Experience</h3>
+      <div class="workplace">
+        <span class="date">2014</span> <span class="name">Gnetic, Inc</span>
+        <p class="title">Software Engineer</p>
+        Helped put together the electrical system for a prototype using an Arduino
+        and RaspberryPi, and an Android controller
+      </div> <hr>
       <div class="workplace">
         <span class="date">2014</span> <span class="name">Declara</span>
         <p class="title">Data Science Intern</p>
         Applied natural language processing and machine learning algorithms
         to create an automatic text-tagging system.
+      </div> <hr>
 
+      <div class="workplace">
+        <span class="date">2014</span> <span class="name">Whodini</span>
+        <p class="title">Software Engineering Intern</p>
+        Extended topic classification pipleines using techniques from
+        text-retrieval, natural language processing, and machine learning
       </div>
     </div>
 
+
+
   </div>
-
-
-
-
 </body>
