Added latex caps

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h3>Technical Skills</h3>
       <p id="skill-list">
       Python: nltk3, scikit-learn, numpy, pandas, scipy, SQLAlchemy, Flask <br>
-      Java, HTML5, CSS3, JavaScript, SQL, <span class="latex">L<sup id="a">a</sup>T<sub>e</sub>X</span> <br>
+      Java, HTML5, CSS3, JavaScript, SQL, <span class="latex">L<sup id="a">A</sup>T<sub>E</sub>X</span> <br>
       Linux, PostgreSQL, Meteor, Git, Github
       </p> <hr>
 
