Picture on the right

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   <link rel="stylesheet" href="/public/serif-slanted/cmun-serif-slanted.css">
 </head>
 <body>
-
   <div id="page-content">
+    <ul>
+      <li>Home</li>
+      <li>Blog</li>
+    </ul>
+
 
     <div id="heading">
 
-      <h1>Dhruv Rajan</h1>
-      <img height="176" width="159" src="face.jpg">
+      <h1>Dhruv Rajan <img style="float: right" height="176" width="159" src="face.jpg"></h1>
+
       <p>
         B.S. Computer Science (Turing Scholar) <br>
         The University of Texas at Austin <br>
@@ -27,7 +31,7 @@
     <div id="skills">
       <h3>Technical Skills</h3>
       <p id="skill-list">
-      Python: nltk3, scikit-learn, numpy, pandas, scipy, SQLAlchemy, Flask <br>
+      Python: nltk3, scikit-learn, matplotlib, numpy, pandas, scipy, SQLAlchemy, Flask <br>
       Java, HTML5, CSS3, JavaScript, SQL, <span class="latex">L<sup id="a">A</sup>T<sub>E</sub>X</span> <br>
       Linux, PostgreSQL, Meteor, Git, Github
       </p> <hr>
@@ -85,8 +89,6 @@
         text-retrieval, natural language processing, and machine learning
       </div>
     </div>
-
-
 
   </div>
 </body>
