Added coursework bullet list

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div id="page-content">
-    <ul>
-      <li>Home</li>
-      <li>Blog</li>
-    </ul>
+    <!--<ul>-->
+      <!--<li>Home</li>-->
+      <!--<li>Blog</li>-->
+    <!--</ul>-->
 
 
     <div id="heading">
@@ -31,20 +31,38 @@
     <div id="skills">
       <h3>Technical Skills</h3>
       <p id="skill-list">
-      Python: nltk3, scikit-learn, matplotlib, numpy, pandas, scipy, SQLAlchemy, Flask <br>
-      Java, HTML5, CSS3, JavaScript, SQL, <span class="latex">L<sup id="a">A</sup>T<sub>E</sub>X</span> <br>
-      Linux, PostgreSQL, Meteor, Git, Github
-      </p> <hr>
+        <pre>Python: nltk, scikit-learn, matplotlib, numpy, pandas, scipy, SQLAlchemy, Flask</pre>
+        <pre>Haskell, Java, HTML5, CSS3, JavaScript, SQL, LaTeX</pre> <!--<span class="latex">L<sup id="a">A</sup>T<sub>E</sub>X</span> <br>-->
+        <pre>Linux, PostgreSQL, Meteor, Git, Github</pre>
+      </p>
+    </div>
+    <div id="coursework">
+      <p >
+        <h3>Relevant Coursework</h3>
+        <ul>
+          <li>Ongoing</li>
+          <ul>
+            <li>Computer Organization and Architecture (CS 429H), Linear Algebra (M 341)</li>
+          </ul>
 
-      <p id="coursework">
-        Relevant Coursework: <br>
-        (Ongoing) Computer Organization and Architecture (CS 429H), Linear Algebra (M 341) <br>
-        (Completed) Data Structures and Algorithms (CS 314H), Discrete Math for Computer Science (311 H),
-        Probability I (M 362K), Multivariable and Vector Calculus <br>
+          <li>Completed</li>
+          <ul>
+            <li>
+              Data Structures and Algorithms (CS 314H), Discrete Math for Computer Science (311 H),
+              Probability I (M 362K), Multivariable and Vector Calculus
+            </li>
+          </ul>
 
-        Online: Principles of Functional Programming in Haskell (TU Delft),
-        Intro to Computational Thinking and Data Science (MIT 6.00x),
-        Algorithms I (Princeton)
+          <li>Online</li>
+          <ul>
+            <li>
+              Principles of Functional Programming in Haskell (TU Delft),
+              Intro to Computational Thinking and Data Science (MIT 6.00x),
+              Algorithms I (Princeton)
+            </li>
+          </ul>
+
+        </ul>
       </p>
     </div>
 
@@ -56,6 +74,14 @@
         which can listen to a corporate meeting, and automatically extract conversational information (deadlines,
         projects, dependencies), and display it as a gantt chart. At MHacks 2016, I put together a simple proof
         of concept, and I'm continuing to develop further.
+      </div> <hr>
+
+      <div class="project">
+        <span class="date">2013-2016</span> <span class="name">GRTPyFramework</span>
+        GRTPyFramework is an event-based robotics control framework in Python, built on
+        robotpy. While part of the Gunn Robotics Team, I assisted in its development, and using
+        it to develop robot code for the FIRST competition--including implementing autonomous control loops (PID),
+        and automatic vision-aided aiming.
       </div> <hr>
 
       <div class="project">
