--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
       <!--<li>Home</li>-->
       <!--<li>Blog</li>-->
     <!--</ul>-->
-
-    hi
-
-
     <div id="heading">
-
       <h1>Dhruv Rajan <img style="float: right" height="176" width="159" src="face.jpg"></h1>
 
       <p>
@@ -71,27 +66,34 @@
     <div id="projects">
       <h3>Projects</h3>
       <div class="project">
-        <span class="date">October 2016</span> <span class="name">scrivener.ai</span>
-        Using speech-recognition and grammatical parsing in python (nltk) to develop a system
-        which can listen to a corporate meeting, and automatically extract conversational information (deadlines,
-        projects, dependencies), and display it as a gantt chart. At MHacks 2016, I put together a simple proof
-        of concept, and I'm continuing to develop further.
+        <span class="date">October 2016</span> <span class="name">scrivener.ai</span> <br>
+        <p>
+          Using speech-recognition and grammatical parsing in python (nltk) to develop a system
+          which can listen to a corporate meeting, and automatically extract conversational information (deadlines,
+          projects, dependencies), and display it as a gantt chart. At MHacks 2016, I put together a simple proof
+          of concept, and I'm continuing to develop further.
+        </p>
       </div> <hr>
 
       <div class="project">
-        <span class="date">2013-2016</span> <span class="name">GRTPyFramework</span>
-        GRTPyFramework is an event-based robotics control framework in Python, built on
-        robotpy. While part of the Gunn Robotics Team, I assisted in its development, and using
-        it to develop robot code for the FIRST competition--including implementing autonomous control loops (PID),
-        and automatic vision-aided aiming.
+        <span class="date">2013-2016</span> <span class="name">GRTPyFramework</span> <br>
+
+        <p>
+          GRTPyFramework is an event-based robotics control framework in Python, built on
+          robotpy. While part of the Gunn Robotics Team, I assisted in its development, and using
+          it to develop robot code for the FIRST competition--including implementing autonomous control loops (PID),
+          and automatic vision-aided aiming.
+        </p>
       </div> <hr>
 
       <div class="project">
-        <span class="date">January 2015</span> <span class="name">mind controlled internet of things</span>
-        My friend Armin and I worked on this together. Collecting data from a MUSE EEG-sensing headband, and using
-        pylab for vizualization and statistical analysis, we were able to discern between mental states (ex. "agitated",
-        "calm") to (1) control lightbulbs, but (2) to use as a very simple authentication system, where a "password" is a
-        sequence of mental states.
+        <span class="date">January 2015</span> <span class="name">mind controlled internet of things</span> <br>
+        <p>
+          My friend Armin and I worked on this together. Collecting data from a MUSE EEG-sensing headband, and using
+          pylab for vizualization and statistical analysis, we were able to discern between mental states (ex. "agitated",
+          "calm") to (1) control lightbulbs, but (2) to use as a very simple authentication system, where a "password" is a
+          sequence of mental states.
+        </p>
       </div>
     </div>
 
