--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dhruv Rajan</title>
-  <!--<link rel="stylesheet" href="styles.css">-->
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="/public/serif/cmun-serif.css">
   <link rel="stylesheet" href="/public/sans-serif/cmun-sans.css">
   <link rel="stylesheet" href="/public/serif-italic/cmun-classical-serif-italic.css">
