--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/public/sans-serif/cmun-sans.css">
   <link rel="stylesheet" href="/public/serif-italic/cmun-classical-serif-italic.css">
   <link rel="stylesheet" href="/public/serif-slanted/cmun-serif-slanted.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans|Proza+Libre|Raleway|Roboto|Quicksand" rel="stylesheet">
 </head>
 <body>
   <div id="page-content">
